Final version of HTML YOU project.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
-<h1>Sean Robleto</h1>
+<!DOCTYPE html>
+<html>
 
-<ul> <b>Interests:</b> Music & Technology</ul>
-<ul> <b>Goals and Dreams:</b> Be a software developer and maybe start my own company on the side.</ul>
-<ul> <b>Mentors:</b> I wish Tim Cook and Pharell Williams were my mentors.</ul>
-<ul> <b>Living Locations:</b> I have lived in NYC most of my life. Soho, LES, Washington Heights and now Brooklyn. I lived in Brazil breifly when I was a toddler.</ul>
+<body>
+
+    <h1>Sean Robleto</h1>
+
+    <ul>
+        <li><b>Interests:</b> Music & Technology</li>
+        <br>
+        <li> <b>Goals and Dreams:</b> Be a software developer and maybe start my own company on the side.</li>
+        <br>
+        <li> <b>Mentors:</b> I wish Pharell Williams and Tim Cook were my mentors.</li>
+        <br>
+        <img src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.complex.com%2Fcomplex%2Fimages%2Fc_fill%2Cdpr_auto%2Cf_auto%2Cq_90%2Cw_1400%2Ffl_lossy%2Cpg_1%2Fggd40lcc2nrxwynoa49p%2Fpharrell-williams-interview-beats&f=1&nofb=1
+            width="200" length="200">
+        <img src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.businessinsider.in%2Fphoto%2F80125880%2Fapple-ceo-tim-cooks-pay-soared-nearly-30-last-year-to-almost-15-million-as-the-iphone-maker-thrived-amid-the-pandemic.jpg%3Fimgsize%3D160382&f=1&nofb=1
+            width="172" length="172">
+        <br>
+        <br>
+        <li> <b>Living Locations:</b> I have lived in NYC most of my life. Soho, LES, Washington Heights and now
+            Brooklyn. I lived in Brazil briefly when I was a toddler.</li>
+        <br>
+        <img src=https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/2880px-Flag_of_the_United_States.svg.png
+            width="200" length="200">
+        <img src=https://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/2560px-Flag_of_Brazil.svg.png
+            width="150" length="150">
+    </ul>
+
+</body>
+
+</html>
