--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             width="200" length="200">
         <img src=https://upload.wikimedia.org/wikipedia/en/thumb/0/05/Flag_of_Brazil.svg/2560px-Flag_of_Brazil.svg.png
             width="150" length="150">
+
+            <br>
+            <br>
+
+            <button onclick="location.href='https://github.com/seanrobleto/winterbootcamp2022'">
+                Github</button>
     </ul>
 
 </body>
